load("@rules_shell//shell:sh_test.bzl", "sh_test")

sh_test(
    name = "python_tools_test",
    srcs = ["run_python_tools_test.sh"],
    data = [
        "test_python_tools.py",
        "//tools/core:schemas/sync_agentless_schema.py",
        "//tools/core:validate_payload_schema.py",
        "//tools/dev:check_module_versions.py",
    ],
    size = "small",
    timeout = "short",
)

test_suite(
    name = "tests",
    tests = [":python_tools_test"],
)
