# Unless explicitly stated otherwise all files in this repository are licensed under
# the Apache 2.0 License.
#
# This product includes software developed at Datadog
# (https://www.datadoghq.com/) Copyright 2025-Present Datadog, Inc.

load("@rules_shell//shell:sh_test.bzl", "sh_test")

sh_test(
    name = "python_tools_test",
    size = "small",
    timeout = "short",
    srcs = ["run_python_tools_test.sh"],
    data = [
        "test_python_tools.py",
        "test_rules_go_variant_tools.py",
        "//tools/core:schemas/check_schema_parser_parity.py",
        "//tools/core:schemas/sync_agentless_schema.py",
        "//tools/core:test_optimization_doctor.bzl",
        "//tools/core:test_optimization_doctor.py",
        "//tools/core:test_optimization_sync.bzl",
        "//tools/core:uploader_bash_runtime.sh.tpl",
        "//tools/core:uploader_batch_runtime.bat.tpl",
        "//tools/core:uploader_powershell_runtime.ps1.tpl",
        "//tools/core:validate_payload_schema.py",
        "//tools/dev:check_bazelversion_sync.py",
        "//tools/dev:check_module_versions.py",
        "//tools/dev:lint_uploader_templates.py",
        "//tools/dev:verify_rules_go_variants.py",
        "//tools/tests:integration/mock_dd_server.py",
    ],
)

sh_test(
    name = "bazelw_wrapper_test",
    size = "small",
    timeout = "short",
    srcs = ["run_bazelw_wrapper_test.sh"],
    data = [
        "//:.bazelversion",
        "//:bazelw",
    ],
    target_compatible_with = select({
        "@platforms//os:windows": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
)

test_suite(
    name = "tests",
    tests = [
        ":bazelw_wrapper_test",
        ":python_tools_test",
    ],
)
