# Unless explicitly stated otherwise all files in this repository are licensed under
# the Apache 2.0 License.
#
# This product includes software developed at Datadog
# (https://www.datadoghq.com/) Copyright 2025-Present Datadog, Inc.

load("@datadog-rules-test-optimization-dotnet//:topt_dotnet_test.bzl", "dd_topt_dotnet_test")
load("@test_optimization_data//:export.bzl", "topt_data")
load(":dotnet_test_adapter.bzl", "dotnet_csharp_test_adapter")

dd_topt_dotnet_test(
    name = "hello_test",
    dotnet_test_rule = dotnet_csharp_test_adapter,
    topt_data = topt_data,
    module_identifier = "Company.Product.Example",
    srcs = ["smoke_test.cs"],
    target_frameworks = ["net8.0"],
)
