load("@rules_go//go:def.bzl", "go_binary", "go_test")
load("@datadog-rules-test-optimization//tools:topt_go_test.bzl", "dd_topt_go_test")
load("@test_optimization_data//:export.bzl", "topt_data")

go_binary(
  name = "hello",
  srcs = ["main.go"],
)

dd_topt_go_test(
  name = "hello_test",
  go_test_rule = go_test,
  topt_data = topt_data,
  # Optional: override import path if your Bazel package is not under the Go module path
  # go_module_path = topt_data["go"]["module_path"],
  importpath = "UnitTestProject3",
  srcs = ["main_test.go", "main.go"],
)

