# Unless explicitly stated otherwise all files in this repository are licensed under
# the Apache 2.0 License.
#
# This product includes software developed at Datadog
# (https://www.datadoghq.com/) Copyright 2025-Present Datadog, Inc.

load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("@datadog-rules-test-optimization-go//:topt_go_test.bzl", "dd_topt_go_test")
load("@test_optimization_data//:export.bzl", "topt_data")

go_binary(
  name = "hello",
  srcs = ["main.go"],
)

go_library(
  name = "hello_lib",
  srcs = ["main.go"],
  importpath = "example.com/single-service-go-project",
)

dd_topt_go_test(
  name = "hello_test",
  topt_data = topt_data,
  srcs = ["main_test.go"],
  embed = [":hello_lib"],  # lets the macro infer importpath via rules_go provider
)
