load("@datadog-rules-test-optimization-java//:topt_java_test.bzl", "dd_topt_java_test")
load("@test_optimization_data//:export.bzl", "topt_data")

java_library(
    name = "hello_lib",
    srcs = ["Hello.java"],
)

dd_topt_java_test(
    name = "hello_test",
    srcs = ["HelloTest.java"],
    agent_jar = "@dd_java_agent//file",
    # Stable dd-java-agent (1.60.0) crashes JUnit4 instrumentation with
    # `Could not find test suite with descriptor`. Disable CI Visibility in
    # the example until payload-file mode lands; the agent JAR is still
    # loaded so the -javaagent wiring is exercised.
    ci_visibility_enabled = False,
    env = {"DD_CIVISIBILITY_ENABLED": "false"},
    test_class = "com.example.topt.HelloTest",
    topt_data = topt_data,
    deps = [":hello_lib"],
)
