load("@datadog-rules-test-optimization-java//:topt_java_test.bzl", "dd_topt_java_test")
load("@test_optimization_data//:export.bzl", "topt_data")

java_library(
    name = "hello_lib",
    srcs = ["com/example/topt/Hello.java"],
)

dd_topt_java_test(
    name = "hello_test",
    srcs = ["com/example/topt/HelloTest.java"],
    agent_jar = "@dd_java_agent//file",
    test_class = "com.example.topt.HelloTest",
    topt_data = topt_data,
    deps = [":hello_lib"],
)
